# pico-weatherstation-c

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  forwarder.go  go.mod  go.sum  pico-console-reader.go  pyconsole-filter.py  pyconsole-readonly.py  pyconsole.py  raw-console.go  weatherstation.c  wind_direction.c  wind_direction.h
forwarder/: forwarder.go  go.mod
